[package]
name = "crabdis"
description = "It's like Redis but a bit rusty..."
license = "MIT"
repository = "https://github.com/pxseu/crabdis"
readme = "README.md"
homepage = "https://github.com/pxseu/crabdis#readme"
version = "0.1.4"
edition = "2021"

[dependencies]
log = "0.4"
fern = "0.6"
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.36", features = ["full", "tracing"] }
async-trait = "0.1"

[profile.release]
strip = true
lto = true
opt-level = 3
panic = "abort"
